# DSS

./: .gitignore  README.md
lab1/: README.md  db.sqlite
lab10/: README.md  Vagrantfile
lab10/scripts/: 01-create-tables.sql  02-populate-tables.sql
lab2/: README.md  db.sqlite
lab2/scripts/: 02-populate-tables.sql  03-select-data.sql
lab3/: README.md
lab3/scripts/: 01-create-tables.sql  02-populate-tables.sql  03-select-data.sql
lab4/: README.md  db.sqlite  docker-compose.yaml
lab4/scripts/: 03-02-select-data.sql  03-03-select-data.sql  03-04-select-data.sql
lab5/: README.md  docker-compose.yaml  main.py  pyproject.toml
lab5/scripts/: 01-create-tables.sql  02-populate-tables.sql  03-select-data.sql
lab6/: README.md  docker-compose.yaml
lab6/scripts/: 01-create-tables.sql  02-create-schemas.sql  03-create-roles.sql  04-verify-roles.sql  05-create-users.sql
lab7/: README.md  docker-compose.yaml
lab7/scripts/: 02-populate-tables.sql  03-read-commited-a.sql  03-read-commited-b.sql  04-repeatable-read-a.sql  04-repeatable-read-b.sql  05-serializable-a.sql  05-serializable-b.sql
lab8/: README.md  Vagrantfile  entrypoint.sh
lab8/scripts/: 01-create-tables.sql  02-populate-tables.sql
lab9/: README.md  docker-compose.yaml
lab9/scripts/: 02-01-statistics.sql  02-03-statistics.sql  03-01-select-data.sql  03-02-create-indexes.sql  04-index-size.sql  05-break-index.sql
